# course-project-krykna

./: CMakeLists.txt  RobotFleet_CommandLineInterface-SequenceDiagram.wsd  Test.cpp  dependencies.cmake  ls  test
app/: APP.md  CMakeLists.txt  Management.cpp  Robot.cpp  Robot.hpp  fleet_manager  fleet_manager.cpp
docs/: DataStorage_RobotFleet.csv  README.md  STANDUP.md  sprint_reviews.md  use_case.puml
docs/design/: DESIGN.md  RobotFleet_CommandLineInterface-SequenceDiagram.wsd  USE_CASES.md  management_class_diagram.puml  room_class_diagram.puml
docs/design/CSV Examples/: DataStorage_RobotFleet.csv
docs/design/activity_diagram/: activity_diagram.puml
docs/design/class_diagrams/: management_class_diagram.puml  robot_class_diagram.puml  room_class_diagram.puml
docs/design/sequence_diagrams/: RobotFleet_CLI_Manager_CSV_DataInteraction.puml  adding_sequence_diagram.puml  cleaning_sequence_diagram.puml  requesting_status_sequence_diagram.puml
docs/review/: s2.md  s3.md
docs/use_cases/: USE_CASES.md  use_case.puml
docs/user-guide/: USER_GUIDE.md
include/: INCLUDE.md
include/libRobot/: Robot.hpp
include/libroom/: room.hpp
include/manage/: Management.hpp
src/: Interface.cpp  Management.cpp  RoTimer.cpp  Robot.cpp  SRC.md  room.cpp
tests/: CMakeLists.txt  Cleaning_Operation.cpp  RobotTest.cpp  TESTS.md  catch2Testing.cpp  next_test.cpp  robot_class_test.cpp  robot_test.csv  room_class_test.cpp  room_test.csv  testRobot.cpp  testRoom.cpp  test_management.cpp
tests/management_class/: robot_test.csv  room_test.csv  test_management.cpp
tests/need_to_convert_to_catch/: test_management.cpp
